css/theme.css
/* ... */
.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl {
  -moz-border-radius-bottomleft: 5px;
  -webkit-border-bottom-left-radius: 5px;
  -khtml-border-bottom-left-radius: 5px;
  border-bottom-left-radius: 5px;
}
.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr {
  -moz-border-radius-topright: 5px;
  -webkit-border-top-right-radius: 5px;
  -khtml-border-top-right-radius: 5px;
  border-top-right-radius: 5px;
}
.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
  -moz-border-radius-topleft: 5px;
  -webkit-border-top-left-radius: 5px;
  -khtml-border-top-left-radius: 5px;
  border-top-left-radius: 5px;
}
.ui-corner-tl { -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px; }
.ui-corner-tr { -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px; }
.ui-corner-bl { -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-left-radius: 5px; }
.ui-corner-br { -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px; }

/* jQuery - left menu arrows (?) */


.ui-accordion .ui-accordion-content {
  background: url(../images/left-menu-shadow.png); background-repeat: no-repeat; background-position: 8px 0px;
  padding: 2px 15px 2px 15px;
}

.theme-left-menu-category .ui-state-default, .theme-left-menu-category .ui-icon { background-image: url(../images/arrow-up.png); height: 9px; width: 9px; background-position: 0 0; padding-top: 3px;}

.theme-summary-table-header {
  border: none;
}

.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(../images/arrow-up.png); }
.ui-state-active .ui-icon {
  background-image: url(../images/arrow-down-green.png); height: 9px; width: 9px; background-position: right 0;
}

.ui-state-active a:link, .ui-state-active a:visited {
  color: #e1852e;
}

.ui-button-text-only .ui-button-text {
  padding: 0px .2em;
}
.ui-button-text-only:hover {
  color: #e1852e;
}

/* ------------------------------------------------------------------------- */
/* Icons */
/* ------------------------------------------------------------------------- */

.theme-icon-ok {
  background-image: url(../images/icon-checkmark.png);
  background-repeat: no-repeat;
  background-position: 0 0;
  height: 16px;
  width: 16px;
  float: left;
}

.theme-icon-fail {
  background-image: url(../images/icon-xmark.png);
  background-repeat: no-repeat;
  background-position: 0 0;
  height: 16px;
  width: 16px;
  float: left;
}

.theme-icon-warning {
  background-image: url(../images/icon-warning.png);
  background-repeat: no-repeat;
  background-position: 0 0;
  height: 16px;
  width: 16px;
  float: left;
}

/* ========================================================================= */
/* W I D G E T S */
/* ========================================================================= */

/* ------------------------------------------------------------------------- */
/* Anchors */
/* ------------------------------------------------------------------------- */

/* Common anchor classes */

a.theme-anchor { 
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    padding-bottom: 0px;
    text-decoration: none;
}

a.theme-anchor:hover {
  color: #e1852e;
}
/* Next two styles are for radio input as buttons */
.ui-buttonset .ui-button { 
  background: transparent url('../images/button-bg.png') repeat-x !important;
  color: #e1852e;
  padding: 1px 5px;
}
label.ui-state-active span.ui-button-text {
  color: #686868;
}

a.theme-anchor-important { 
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding: 1px 5px;
  border: 1px solid #d1d3d4;
  font-size: 10px;
  color: #e1852e !important;
}

a.theme-anchor-important:hover {
  border: 1px solid #a5a4a4;
  color: #e1852e;
}

a.theme-anchor-unimportant {
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding: 1px 5px;
  border: 1px solid #d1d3d4;
  font-size: 10px;
  color: #e1852e;
}

a.theme-anchor-unimportant:hover {
  border: 1px solid #a5a4a4;
  color: #e1852e;
}

a.theme-anchor-unimportant, x:-moz-any-link, x:default {
  padding-bottom: 1px;
  padding-right: 5px; 
}

.theme-anchor-important .ui-button  {
  border: blue 5px solid;
}
/* ------------------------------------------------------------------------- */
/* Buttons */
/* ------------------------------------------------------------------------- */

/* Common button class */

input.theme-form-important { 
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding-left: 5px;
  padding-right: 5px;
  height: 18px;
  border: 1px solid #d1d3d4;
  color: #e1852e;
  padding: 0em 1em;
  clear: both;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px;
}

input.theme-form-important, x:-moz-any-link, x:default {
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding-left: 5px;
  padding-right: 5px;
  line-height: 12px;
  border: 1px solid #d1d3d4;
  color: #e1852e;
  margin-top: 0px;
  padding-bottom: 1px;
  clear: both;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px;
}
/* ... */

